<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_twotone_home_24"
        android:title="@string/menu_home_title_text"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/menu_favorits_title_text"
        app:showAsAction="withText"></item>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_btn_later"
        android:title="@string/menu_seelater_title_text"
        app:showAsAction="withText"></item>
    <item
        android:id="@+id/casts"
        android:icon="@drawable/ic_btn_casts"
        android:title="@string/menu_casts_title_text"
        app:showAsAction="withText"></item>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/menu_settings_title_text"
        app:showAsAction="withText"></item>
</menu>