<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/casts_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible"
    android:background="@drawable/background_casts"
    tools:context=".view.fragments.CastsFragment">

</androidx.constraintlayout.widget.ConstraintLayout>

<!--    android:visibility="invisible"-->