<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/favorite_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:background="@drawable/background_favorites"
    tools:visibility="visible"
    tools:context=".view.fragments.FavoritesFragment">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/favorites_recycler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/film_item"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
</androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>